# rust-api-boilerplate

./: Cargo.toml  README.md
config/: default.toml
deploy/: Dockerfile  README.md
docs/: database.md  sqlx-cli.md
docs/api/: articles.md  auth.md  post.md  profile.md  user.md
migrations/: 20241010115927_users.up.sql  20241022080337_articles.down.sql  20241022080337_articles.up.sql  20241022080337_posts.up.sql  20250225020916_user_profiles.down.sql  20250225020916_user_profiles.up.sql
src/: config.rs  datetime.rs  db.rs  json_config.rs  jwt.rs  lib.rs  main.rs  pagination.rs
src/auth/: jwt.rs  mod.rs  provider.rs  provider_default.rs
src/middleware/: auth_validator.rs  authentication.rs  mod.rs
src/server/: mod.rs  route.rs
src/server/article/: error.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/server/auth/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  password.rs  repository.rs  route.rs  service.rs
src/server/health/: handler.rs  mod.rs  route.rs
src/server/index/: handler.rs  route.rs
src/server/post/: dto.rs  error.rs  handler.rs  model.rs  repository.rs  service.rs
src/server/profile/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/server/user/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/server/user/model/: mod.rs  user.rs  user_profile.rs
src/server/user/repository/: mod.rs  user.rs  user_profile.rs
