[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
log = "0.4"
env_logger = "0.11.5"
config = "0.14.0"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.36", features = ["macros", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "time"] }
redis = { version = "0.27.4", features = ["tokio-comp"] }
bcrypt = "0.15.1"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
futures-util = "0.3.1"
